CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)

PROJECT( VRPN_C_MODULE )

INCLUDE_DIRECTORIES(${VRPN_INCLUDE_DIRS})

SET(SOURCES
	VRPNAnalogInstance.cpp
	VRPNButtonInstance.cpp
	VRPNTrackerInstance.cpp
	VRPNWrapper.cpp
)

ADD_EXECUTABLE(vrpn_c_module WIN32 MACOSX_BUNDLE ${SOURCES})

TARGET_LINK_LIBRARIES(vrpn_c_module ${VRPN_SERVER_LIBRARY}
	vrpn_timecode_generator
	${VRPN_ATMEL_LIBRARY}
	${VRPN_GPSNMEA_LIBRARY}
	${VRPNPHANTOMLIB}
)
